# RAPx

./: .gitignore  Cargo.toml  README.md  install.sh  rust-toolchain.toml
.github/workflows/: plan-jobs.yml  release.yml
rap/: Cargo.toml
rap/src/: lib.rs
rapx/: Cargo.toml
rapx/.github/: copilot-instructions.md
rapx/src/: def_id.rs  init.rs  lib.rs
rapx/src/analysis/: mod.rs  test.rs
rapx/src/analysis/graphs/: scc.rs
rapx/src/analysis/opt/: mod.rs
rapx/src/analysis/safedrop/: alias.rs  bug_records.rs  check_bugs.rs  corner_handle.rs  graph.rs  mod.rs  safedrop.rs
rapx/src/analysis/scan/: mod.rs  statistic.rs  visitor.rs
rapx/src/analysis/senryx/: dominated_graph.rs  generic_check.rs  matcher.rs  mod.rs  symbolic_analysis.rs  visitor.rs  visitor_check.rs
rapx/src/analysis/unsafety_isolation/: draw_dot.rs  generate_dot.rs  hir_visitor.rs  mod.rs  render_module_dot.rs  std_unsafety_isolation.rs
rapx/src/analysis/upg/: draw_dot.rs  fn_collector.rs  generate_dot.rs  hir_visitor.rs  mod.rs  render_module_dot.rs  std_upg.rs  upg_graph.rs  upg_unit.rs
rapx/src/analysis/utils/: def_path.rs  draw_dot.rs  fn_info.rs  mod.rs  show_mir.rs  types.rs
rapx/src/preprocess/: dummy_fns.rs  dummy_ptr_deref.rs  mod.rs  ssa_preprocess.rs
rapx/src/utils/: log.rs  source.rs
rapx/tests/: tests.rs
rapx/tests/alias/alias_sub_scc/: Cargo.toml
rapx/tests/alias/mem_take/: Cargo.toml
rapx/tests/audit/safe_caller/: Cargo.toml
rapx/tests/audit/unsafe_caller/: Cargo.toml
rapx/tests/callgraph/dynamic/: Cargo.toml
rapx/tests/range/range_array/: Cargo.toml
(+137 files in other folders)
