[package]
name = "rap"
version = "1.0.0"
edition = "2018"
authors = ["Moran Tsui <cuimohan@fudan.edu.cn>"]
repository = "https://github.com/os-checker/rap"
default-run = "rap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rap"

[[bin]]
name = "cargo-rap"

[lib]
name = "rap"

[dependencies]
#lazy_static = "1.4"
rustc_version = "0.4.0"
cargo_metadata = "0.14.1"
snafu = "0.7.0"
chrono = "0.4.19"
serde_json = "1.0.72"
z3 = "0.12.1"
log = "0.4.14"
fern = {version = "0.6.2", features = ["colored"]}
wait-timeout = "0.2.0"
rustc-demangle = "0.1.21"
colorful = "0.2.1"
#stopwatch = "0.0.7"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
plan-jobs = ["./plan-jobs.yml"]
